--- a/_posts/2024-01-23-최고의-선택-전주한옥마을한복대여-별점-높은-순위-BEST10-!.md
+++ b/_posts/2024-01-23-최고의-선택-전주한옥마을한복대여-별점-높은-순위-BEST10-!.md
@@ -1,5 +1,5 @@
 ---
-title: "최고의 선택 전주한옥마을한복대여 별점 높은 순위 BEST10 ! [전주] 전주한옥마을 한복대여경성의복교복 "색동저고리""
+title: "최고의 선택 전주한옥마을한복대여 별점 높은 순위 BEST10! 전주 전주한옥마을 한복대여경성의복교복 색동저고리"
 author: shopping
 categories: shopping
 tags: shopping
