--- a/_posts/2024-05-16-피쉬-상품평-많은-아이템-BEST10-확인.md
+++ b/_posts/2024-05-16-피쉬-상품평-많은-아이템-BEST10-확인.md
@@ -1,5 +1,5 @@
 ---
-title: " 피쉬 상품평 많은 아이템 BEST10 확인 IKA"S 피시스넥 스파이스맛 24개 13g"
+title: " 피쉬 상품평 많은 아이템 BEST10 확인 IKAS 피시스넥 스파이스맛 24개 13g"
 author: shopping
 categories: shopping
 tags: shopping
