--- a/_posts/2024-02-25-전주한옥마을한복-저렴한-제품-BEST-10-!!.md
+++ b/_posts/2024-02-25-전주한옥마을한복-저렴한-제품-BEST-10-!!.md
@@ -1,5 +1,5 @@
 ---
-title: " 전주한옥마을한복 저렴한 제품 BEST 10 !! [전주] 전주한옥마을 한복대여경성의복교복 "색동저고리""
+title: " 전주한옥마을한복 저렴한 제품 BEST 10 !! 전주 전주한옥마을 한복대여경성의복교복 색동저고리"
 author: shopping
 categories: shopping
 tags: shopping
