--- a/_posts/2024-05-13-네잎클로버반지-추천하는-아이템-BEST-10.md
+++ b/_posts/2024-05-13-네잎클로버반지-추천하는-아이템-BEST-10.md
@@ -1,5 +1,5 @@
 ---
-title: " 네잎클로버반지 추천하는 아이템 BEST 10 골드팡 14k 18k 딥그린네잎클로버 반지 "일부호수"
+title: " 네잎클로버반지 추천하는 아이템 BEST 10 골드팡 14k 18k 딥그린네잎클로버 반지 일부호수"
 author: shopping
 categories: shopping
 tags: shopping
